--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tudo sobre Google Glass</title>
-	<link rel="stylesheet" type="text/css" href="../projeto-glass-html5/_css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="../_css/estilo.css">
 </head>
 <script language="javascript" src="../projeto-glass-html5/_javascript/funcoes.js"></script>  <!--chamando arquivo do javascript-->
 <body>
