--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+<!--Author: Genilson Cavalcante-->
 <head>
 	<meta charset="UTF-8">
 	<title>Tudo sobre Google Glass</title>
